[package]
name = "kepler-wgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = { version = "0.29.15", features = ["rwh_05"] }
env_logger = "0.11.5"
log = "0.4"
wgpu = "22.0"
pollster = "0.3"
# data type cast
bytemuck = { version = "1.16", features = [ "derive" ] }
cfg-if = "1"
num = "0.4"

cgmath = "0.18"
anyhow = "1.0"
dicom-object = "*"
dicom-core = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }

[dependencies.image]
version = "0.25.2"
default-features = false
features = ["png", "jpeg"]

# support the web
# the other regular dependencies...

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "22.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
js-sys = "0.3.22"

[[bin]]
name = "kepler"
path = "src/main.rs"
